Added the twitter

--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@ html {
 
 #footer * {
     color: white;
-    margin: auto 0px;
+    margin: auto 5vw;
 }
 
 /*------------------------------Landing page stuff - ignore------------------------------------*/
