border-radius und höhe von Suchelementen

--- a/style.css
+++ b/style.css
@@ -104,12 +104,13 @@ html {
 
 #header #searchBar, #sidebar #searchBar {
     font-family: 'Luxurious Roman', 'Times New Roman', Times, serif; 
-    border-radius: 20px 0 0 20px;
+    border-radius: 25px 0 0 25px;
     padding: 10px;
+    height: 2vh;
 }
 
 #header #searchButton, #sidebar #searchButton {
-    border-radius: 0 20px 20px 0;
+    border-radius: 0 100% 100% 0;
     padding: 10px;
     height: 2vh;
     width: 2vh;
@@ -303,7 +304,7 @@ html {
 }
 
 #content #bigSearchButton {
-    border-radius: 0 40px 40px 0;
+    border-radius: 0 100% 100% 0;
     padding: 10px;
     height: 4vh;
     width: 4vh;
