--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 
 html {
     scroll-behavior: smooth;
+    scroll-padding: 10vh;
 }
 
 /*---------------------------------------------------------------------------------------------*/
