--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ html {
     border-radius: 25px 0 0 25px;
     padding: 10px;
     height: 2vh;
+    border: none;
 }
 
 #header #searchButton, #sidebar #searchButton {
